<resources>
    <string name="app_name">CoviTrack</string>
    <string name="title_home">Dashboard</string>
    <string name="title_state_list">State </string>
    <string name="title_statistics">Visuals</string>

    <string name="title_total_cases">Total Cases</string>
    <string name="title_active_cases">Active Cases</string>
    <string name="title_recovered_cases">Cured Cases</string>
    <string name="title_death_cases">Death Cases</string>

    <string name="title_source">Done by:Jack Tan Xin Jie</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="tab_text_1">India</string>
    <string name="tab_text_2">Others</string>
    <string name="title_activity_main4">Main4Activity</string>

    <string name="about_covid">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment.</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="covid_detail_one">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment.</string>
    <string name="covid_detail_two">The virus that causes COVID-19 is mainly transmitted through droplets generated when an infected person coughs, sneezes, or exhales. These droplets are too heavy to hang in the air, and quickly fall on floors or surfaces. \n\nYou can be infected by breathing in the virus if you are within close proximity of someone who has COVID-19, or by touching a contaminated surface and then your eyes, nose or mouth.</string>
</resources>
