
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_last_updated"
    android:padding="@dimen/padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_size_default"
                    android:layout_height="@dimen/icon_size_default"
                    android:tint="?colorAccent"
                    app:srcCompat="@drawable/ic_total" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/title_total_cases"
                    android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_all_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_size_category"
                android:textAppearance="@style/TextAppearance.Aurora.Line2"
                tools:text="1000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_size_default"
                    android:layout_height="@dimen/icon_size_default"
                    android:tint="?colorAccent"
                    app:srcCompat="@drawable/ic_hospital" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/title_active_cases"
                    android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_all_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_size_category"
                android:textAppearance="@style/TextAppearance.Aurora.Line2"
                tools:text="819" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_size_default"
                    android:layout_height="@dimen/icon_size_default"
                    android:tint="?colorAccent"
                    app:srcCompat="@drawable/ic_cured" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/title_recovered_cases"
                    android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_all_cured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_size_category"
                android:textAppearance="@style/TextAppearance.Aurora.Line2"
                tools:text="79" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_size_default"
                    android:layout_height="@dimen/icon_size_default"
                    android:tint="?colorAccent"
                    app:srcCompat="@drawable/ic_deaths" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@string/title_death_cases"
                    android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_all_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_size_category"
                android:textAppearance="@style/TextAppearance.Aurora.Line2"
                tools:text="19" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>