

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/txt_all_last_updated"
    android:padding="@dimen/padding_small">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="#FFFFFF"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/card_voltage"
        app:layout_constraintEnd_toStartOf="@+id/card_health"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="#000000"
                app:srcCompat="@drawable/ic_show_chart_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_total_cases"
                android:textColor="#000000"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_all_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                tools:text="1000" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_health"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/card_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_temperature"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="#000000"
                app:srcCompat="@drawable/ic_hospital" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_active_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle"

                android:textColor="#000000" />

            <TextView
                android:id="@+id/txt_all_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                tools:text="819" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_voltage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/outline_bg"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/card_mode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_temperature">

        <LinearLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="#000000"
                app:srcCompat="@drawable/ic_cured" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:text="@string/title_recovered_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_all_cured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                tools:text="79" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_voltage"
        app:layout_constraintTop_toBottomOf="@id/card_health">

        <LinearLayout
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_size_category"
                android:layout_height="@dimen/icon_size_category"
                android:tint="#000000"
                app:srcCompat="@drawable/ic_deaths" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:textColor="#000000"
                android:text="@string/title_death_cases"
                android:textAppearance="@style/TextAppearance.Aurora.SubTitle" />

            <TextView
                android:id="@+id/txt_all_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                tools:text="19" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>